fixing page spacing and search pagination

--- a/assets/sass/components/_single-post.scss
+++ b/assets/sass/components/_single-post.scss
@@ -1,8 +1,3 @@
-.ft-c-single-post {
-  padding-top: 24px;
-  padding-bottom: 24px;
-}
-
 .ft-c-single-post__header {
   img {
     width: 100%;
