--- a/assets/sass/layouts/_content.scss
+++ b/assets/sass/layouts/_content.scss
@@ -1,3 +1,3 @@
 .ft-l-content {
-  padding: 64px 0;
+  padding: 40px 0;
 }
