--- a/assets/sass/pages/_archive.scss
+++ b/assets/sass/pages/_archive.scss
@@ -1,6 +1,4 @@
-.archive .site-content {
-  padding: 24px 0;
-}
+// This needs to be cleaned up
 
 .ft-c-archive-header.ftc-archive-header--has-image {
   @media #{$mq-md} {
