--- a/assets/sass/shame.scss
+++ b/assets/sass/shame.scss
@@ -4,8 +4,3 @@ SHAME! SHAAAAMMMEEE!
 This is the shame file. It is a place for testing, and placing code that is
 temporary or should be refactored into a better location eventually.
 --------------------------------------------------------------*/
-
-////@extend
-.ft-l-page {
-  padding: 64px 0;
-}
